# apache-airflow-docker

./: .gitignore  README.MD  create_k8s_config.py  docker-compose-airflow-celery.yml  docker-compose.yml  pyproject.toml
airflow/: airflow-cluster-role-binding.yaml  airflow-cluster-role.yaml  airflow-sa.yaml
dags/: example_kubernetes.py  example_spark_kubernetes.py  example_spark_kubernetes_copy.py  spark_k8s_python_template.yaml.yaml  spark_scala_kubernetes_template.yaml
database/data/: current_logfiles  postmaster.pid
database/data/base/16384/: 1247  1249  1259  16385  16385_vm  16388  16390  16398  16401  16406  16407  16409  16417  16420  16422  16422_vm  16429  16431  16433  16433_vm  16439  16440  16443  16445  16449  16451  16453  16459  16460  16467  16470  16472  16478  16479  16481  16494  16502  16505  16507  16518  (+77 more)
database/data/global/: pg_control  pg_internal.init
database/data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
src/plugins/backcompat/kubernetes/: pod.py  pod_generator.py  pod_runtime_info_env.py  secret.py  volume_mount.py
src/plugins/backcompat/models/: connection.py  providers_manager.py
src/plugins/k8s/: requirements.txt
src/plugins/k8s/backcompat/: backwards_compat_converters.py
src/plugins/k8s/hooks/: BaseHook.py  kubernetes.py
src/plugins/k8s/operators/: kubernetes_pod.py  spark_kubernetes.py
src/plugins/k8s/sensors/: spark_kubernetes.py
tests/: test_airflow_kube.py
tests/hooks/: test_kubernetes.py
tests/operators/: test_spark_kubernetes.py
tests/sensors/: test_spark_kubernetes.py
(+2 files in other folders)
